--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,13 @@ jobs:
             cd $GITHUB_WORKSPACE
             PYBUILD=3.13 bash ./scripts/build-pkg.sh
 
+
+    - name: Upload build artifact wheels
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: wheel313
+        path: /home/runner/work/pygbag-raylib/pygbag-raylib/external/raylib-python-cffi/dist/*
+
     - name: build 3.13 loader
       run: |
             cd $GITHUB_WORKSPACE
