--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         
 
     - name: Upload build artifact wheels
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: wheel312
         path: /home/runner/work/pygbag-raylib/pygbag-raylib/external/raylib-python-cffi/dist/*
@@ -74,45 +74,45 @@ jobs:
 
 
     - name: Upload build artifact wheels
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: wheel313
         path: /home/runner/work/pygbag-raylib/pygbag-raylib/external/raylib-python-cffi/dist/*
 
-    - name: build 3.13 loader
-      run: |
-            cd $GITHUB_WORKSPACE
-            PYBUILD=3.13 bash ./scripts/build-loader.sh
-
-    - name: build 3.14 packages
-      run: |
-            cd $GITHUB_WORKSPACE
-            PYBUILD=3.14 bash ./scripts/build-pkg.sh
-
-    - name: build 3.14 loader
-      run: |
-            cd $GITHUB_WORKSPACE
-            PYBUILD=3.14 bash ./scripts/build-loader.sh
-
-
-    - name: build PkPy loader
-      run: |
-            cd $GITHUB_WORKSPACE
-            bash ./scripts/build-pkpy.sh
-
-    - name: publishing
-      run: |
-            cd $GITHUB_WORKSPACE
-            touch build/web/archives/.nojekyll
-            echo "<html></html>" >  build/web/archives/index.html
-
-    - name: make wheel
-      run: |
-            cd $GITHUB_WORKSPACE
-            /opt/python-wasm-sdk/python3-wasm -m build --no-isolation .
-
-    - name : "Upload to GitHub pages"
-      uses: JamesIves/github-pages-deploy-action@v4.6.3
-      with:
-        branch: gh-pages
-        folder: build/web/archives
+#    - name: build 3.13 loader
+#      run: |
+#            cd $GITHUB_WORKSPACE
+#            PYBUILD=3.13 bash ./scripts/build-loader.sh
+#
+#    - name: build 3.14 packages
+#      run: |
+#            cd $GITHUB_WORKSPACE
+#            PYBUILD=3.14 bash ./scripts/build-pkg.sh
+#
+#    - name: build 3.14 loader
+#      run: |
+#            cd $GITHUB_WORKSPACE
+#            PYBUILD=3.14 bash ./scripts/build-loader.sh
+#
+#
+#    - name: build PkPy loader
+#      run: |
+#            cd $GITHUB_WORKSPACE
+#            bash ./scripts/build-pkpy.sh
+#
+#    - name: publishing
+#      run: |
+#            cd $GITHUB_WORKSPACE
+#            touch build/web/archives/.nojekyll
+#            echo "<html></html>" >  build/web/archives/index.html
+#
+#    - name: make wheel
+#      run: |
+#            cd $GITHUB_WORKSPACE
+#            /opt/python-wasm-sdk/python3-wasm -m build --no-isolation .
+#
+#    - name : "Upload to GitHub pages"
+#      uses: JamesIves/github-pages-deploy-action@v4.6.3
+#      with:
+#        branch: gh-pages
+#        folder: build/web/archives
